--- a/fourteen.html
+++ b/fourteen.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="fourteen.css" />
 </head>
+
 <body>
-    
+    <h2>Hello</h2>
+    <div class="box">first div</div>
+    <div class="box">second div</div>
+    <div class="box">third div</div>
+    <script src="fourteen.js"></script>
 </body>
-<script src="fourteen.js"></script>
+
 </html>
